2002-10-24  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/user/music-glossary.tely: fix links.

2002-10-21  Werner Lemberg  <wl@gnu.org>

	* tex/lily-ps-defs.tex (\lilypondsetdimen): Define ID macro.
	(\lilypondpostscript): Define PS macros `lyscaleXXX' (`XXX' is the
	scaling factor) only once and use them in the definition of
	\embeddedps.
	* ps/music-drawing-routines.ps (skeel): Removed.

2002-10-21  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/topdocs/INSTALL.texi: Add note about using ksh for
	as workaround for /bin/sh problems on Solaris7.

2002-10-19  Werner Lemberg  <wl@gnu.org>

	* GNUmakefile.in (web-doc): Fix typos.
	* tex/lilyponddefs.tex (\lilypondspecial): Don't scan
	`music-drawing-routines.ps' but emit \special{header=...} once.
	* scm/tex.scm (header-end): Updated.

2002-10-19  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/stem-engraver.cc (acknowledge_grob): don't crash on
	undefined tremolo. 

2002-10-15  Werner Lemberg  <wl@gnu.org>

	* scripts/lilypond-book.py (g_make_html): New global variable.
	(schedule_lilypond_block): Don't compute EPS and PNG for `texi'
	if `g_make_html' isn't set.
	[main]: Add format `texi-html'.
	(option_definitions): Updated.
	* Documentation/user/lilypond-book.itely: Updated.

	* make/lilypond-vars.make (LILYPOND_BOOK_FORMAT): New variable.
	* make/ly-rules.make (%.texi, %.nexi): Use it.
	* stepmake/stepmake/www-targets.make (web): Pass `tex-html' as
	format to lilypond-book.
	* GNUmakefile.in (web-doc): Ditto.

2002-10-14  Werner Lemberg  <wl@gnu.org>

	Further improve TeX output.  The produced files are about 40%
	smaller.  `lilyponddefs.tex' is now read only once.

	* tex/lilyponddefs.tex: Remove footer stuff.
	(\ifundefined): Renamed to...
	(\lilypondundefined): This.  Use LaTeX's definition to
	make it nestable and make it global.
	(\lilypondstart, \lilypondend): New macro to initialize LilyPond
	output.
	(\lilypondspecial): New macro to read `music-drawing-routines.ps'.